solves #45, solves #44 Move replication to /bin/replicate using javascript

--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
@@ -4,6 +4,9 @@
     <td is="coral-table-cell" coral-table-rowselect></td>
     <td is="coral-table-cell">${properties.key}</td>
     <sly data-sly-repeat.language="${properties.languages}">
-        <td is="coral-table-cell">${properties[language]}</td>
+        <td is="coral-table-cell"
+            data-publish-path="${properties.messageEntryPaths[languageList.index]}">
+            ${properties[language]}
+        </td>
     </sly>
 </tr>
