--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/dictionary/dictionary.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/dictionary/dictionary.html
@@ -4,7 +4,7 @@
     data-foundation-collection-navigator-href="/tools/translation/dictionaries/message-entries.html${resource.path}"
     class="foundation-collection-item foundation-collection-navigator">
     <td is="coral-table-cell" coral-table-rowselect></td>
-    <td is="coral-table-cell">${resource.path}</td>
+    <td is="coral-table-cell" data-publish-path="${resource.path}">${resource.path}</td>
     <td is="coral-table-cell">${model.languageList}</td>
     <td is="coral-table-cell">${model.lastModifiedFormatted}</td>
     <td is="coral-table-cell">${model.basename}</td>
