Add AEM 6.5 support

--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/dictionary/dictionary.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/dictionary/dictionary.html
@@ -11,7 +11,7 @@
     <td is="coral-table-cell">
         <coral-icon
                 class="icon--${model.editable ? 'success' : 'warning'}"
-                icon="${model.editable ? 'CheckmarkCircle' : 'CloseCircle'}"
+                icon="${model.editable ? 'checkmarkCircle' : 'closeCircle'}"
                 size="M">
         </coral-icon>
     </td>
