--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
@@ -1,12 +1,13 @@
 <tr is="coral-table-row"
     data-foundation-collection-item-id="${resource.path}"
+    data-dictionary-publish-paths="${properties.messageEntryPaths}"
+    data-dictionary-publish-recursive="false"
     data-dictionary-item-editable="${properties.editable ? 'true' : 'false'}"
     class="foundation-collection-item">
     <td is="coral-table-cell" coral-table-rowselect></td>
     <td is="coral-table-cell">${properties.key}</td>
     <sly data-sly-repeat.language="${properties.languages}">
-        <td is="coral-table-cell"
-            data-publish-path="${properties.messageEntryPaths[languageList.index]}">
+        <td is="coral-table-cell">
             ${properties[language]}
         </td>
     </sly>
