--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
@@ -6,6 +6,19 @@
     class="foundation-collection-item">
     <td is="coral-table-cell" coral-table-rowselect></td>
     <td is="coral-table-cell">${properties.key}</td>
+    <td is="coral-table-cell">
+        <sly data-sly-test="${properties.validationMessages && properties.validationMessages.size > 0}">
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'INFO'}" data-sly-set.color="color: var(--spectrum-global-color-static-blue-400)" />
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'WARNING'}" data-sly-set.color="color: var(--spectrum-global-color-static-orange-400)" />
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'ERROR'}" data-sly-set.color="color: var(--spectrum-global-color-static-red-400)" />
+           <coral-icon icon="alert" style="${color @ context='unsafe' }"></coral-icon>
+           <coral-tooltip variant="${properties.validationMessages.first.severity}" delay="0" target="_prev" >
+           <p data-sly-list.validationMessage="${properties.validationMessages}">
+           Language ${validationMessage.language}: ${validationMessage.i18nKey @ format=validationMessage.arguments, i18n }
+           </p>
+           </coral-tooltip>
+        </sly>
+    </td>
     <sly data-sly-repeat.language="${properties.languages}">
         <td is="coral-table-cell">
             ${properties[language]}
