Support read-only view of JSON-file based dictionaries
This closes #26

--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/dictionary/dictionary.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/dictionary/dictionary.html
@@ -10,6 +10,7 @@
     <td is="coral-table-cell">${resource.path}</td>
     <td is="coral-table-cell">${model.languageList}</td>
     <td is="coral-table-cell">${model.basename}</td>
+    <td is="coral-table-cell">${model.type}</td>
     <td is="coral-table-cell">
         <coral-icon
                 class="icon--${model.editable ? 'success' : 'warning'}"
