--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
@@ -8,10 +8,10 @@
     <td is="coral-table-cell">${properties.key}</td>
     <td is="coral-table-cell" value="${properties.validationMessages ? properties.validationMessages.first.severity.ordinal : '9'}">
         <sly data-sly-test="${properties.validationMessages && properties.validationMessages.size > 0}">
-           <sly data-sly-test="${properties.validationMessages.first.severity == 'INFO'}" data-sly-set.color="color: var(--spectrum-global-color-static-blue-400)" />
-           <sly data-sly-test="${properties.validationMessages.first.severity == 'WARNING'}" data-sly-set.color="color: var(--spectrum-global-color-static-orange-400)" />
-           <sly data-sly-test="${properties.validationMessages.first.severity == 'ERROR'}" data-sly-set.color="color: var(--spectrum-global-color-static-red-400)" />
-           <coral-icon icon="alert" style="${color @ context='unsafe' }"></coral-icon>
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'INFO'}" data-sly-set.color="color: var(--spectrum-global-color-static-blue-700)" />
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'WARNING'}" data-sly-set.color="color: var(--spectrum-global-color-static-orange-700)" />
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'ERROR'}" data-sly-set.color="color: var(--spectrum-global-color-static-red-700)" />
+           <coral-icon icon="${properties.validationMessages.first.severity == 'INFO' ? 'info' : 'alert'}" style="${color @ context='unsafe' }"></coral-icon>
            <coral-tooltip within="#key-list" variant="${properties.validationMessages.first.severity}" delay="0" target="_prev" >
            <ol>
            <p data-sly-list.validationMessage="${properties.validationMessages}">
