--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
@@ -6,6 +6,21 @@
     class="foundation-collection-item">
     <td is="coral-table-cell" coral-table-rowselect></td>
     <td is="coral-table-cell">${properties.key}</td>
+    <td is="coral-table-cell" value="${properties.validationMessages ? properties.validationMessages.first.severity.ordinal : '9'}">
+        <sly data-sly-test="${properties.validationMessages && properties.validationMessages.size > 0}">
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'INFO'}" data-sly-set.color="color: var(--spectrum-global-color-static-blue-700)" />
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'WARNING'}" data-sly-set.color="color: var(--spectrum-global-color-static-orange-700)" />
+           <sly data-sly-test="${properties.validationMessages.first.severity == 'ERROR'}" data-sly-set.color="color: var(--spectrum-global-color-static-red-700)" />
+           <coral-icon icon="${properties.validationMessages.first.severity == 'INFO' ? 'info' : 'alert'}" style="${color @ context='unsafe' }"></coral-icon>
+           <coral-tooltip within="#key-list" variant="${properties.validationMessages.first.severity}" delay="0" target="_prev" >
+           <ol>
+           <p data-sly-list.validationMessage="${properties.validationMessages}">
+           <li>${validationMessage.severity}: Language ${validationMessage.language}: ${validationMessage.i18nKey @ format=validationMessage.arguments, i18n }</li>
+           </p>
+           </ol>
+           </coral-tooltip>
+        </sly>
+    </td>
     <sly data-sly-repeat.language="${properties.languages}">
         <td is="coral-table-cell">
             ${properties[language]}
