Expose languages as Locale objects from CombiningMessageEntryProvider
This prevents implicit conversion from String to Locale via constructor
which was not working, as the string was in fact a language tag
(requires Locale.fromLanguageTag).

This closes #204

--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
@@ -22,7 +22,7 @@
     </td>
     <sly data-sly-repeat.language="${properties.languages}">
         <td is="coral-table-cell">
-            <pre>${properties[language]}</pre>
+            <pre>${properties[language.toLanguageTag]}</pre>
         </td>
     </sly>
 </tr>
