--- a/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aem-dictionary-translator/components/combining-message-entry/combining-message-entry.html
@@ -5,7 +5,7 @@
     data-dictionary-item-editable="${properties.editable ? 'true' : 'false'}"
     class="foundation-collection-item">
     <td is="coral-table-cell" coral-table-rowselect></td>
-    <td is="coral-table-cell"><pre>${properties.key}</pre></td>
+    <td is="coral-table-cell"><pre>${properties.escapedKey}</pre></td>
     <td is="coral-table-cell" value="${properties.validationMessages ? properties.validationMessages.first.severity.ordinal : '9'}" 
         data-sly-test="${properties.validationMessages && properties.validationMessages.size > 0}">
         <sly data-sly-test="${properties.validationMessages.first.severity == 'INFO'}" data-sly-set.color="color: var(--spectrum-global-color-static-blue-700)" />
@@ -22,7 +22,13 @@
     </td>
     <sly data-sly-repeat.language="${properties.languages}">
         <td is="coral-table-cell">
-            <pre>${properties[language.toLanguageTag]}</pre>
+            <pre data-sly-test.hasMessage="${language.toLanguageTag in properties}">${properties[language.toLanguageTag]}</pre>
+            <sly data-sly-test="${!hasMessage}">
+                <coral-icon icon="dataUnavailable"></coral-icon>
+                <coral-tooltip within="#key-list" variant="info" delay="0" target="_prev">
+                    <p>No translation for key ${properties.escapedKey} in language ${language.toLanguageTag}</p>
+                </coral-tooltip>
+            </sly>
         </td>
     </sly>
 </tr>
